# light-ass

./: .gitignore  LICENSE  README.md  README_zh-cn.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: example.py
light_ass/: __init__.py  constants.py  document.py  events.py  fonts.py  parsed_event.py  script_info.py  styles.py  subtitle.py  tag_parser.py  utils.py
light_ass/ass_types/: __init__.py  ass_alpha.py  ass_color.py  ass_time.py
light_ass/curly/: __init__.py  override_block.py  parsed_line.py  parser.py
light_ass/curly/tags/: __init__.py  alignment.py  base.py  color.py  font.py  geometry.py  karaoke.py  parens.py  style.py  transform.py
light_ass/shape/: shape.py
light_ass/types/: __init__.py  align.py  ass_alpha.py  ass_color.py  ass_time.py  point.py
light_ass/types/ass_shape/: __init__.py  command.py  point.py  shape.py
light_ass/utils/: __init__.py  encoding.py  formatter.py  header_type_parser.py  type_parser.py  uu.py
tests/: conftest.py  test1.ass  test_ass_alpha.py  test_ass_color.py  test_ass_shape.py  test_ass_time.py  test_dialog.py  test_document.py  test_events.py  test_formatter.py  test_header_type_parser.py  test_override_block.py  test_resolve.py  test_script_info.py  test_style.py  test_styles.py  test_tag_parser.py  test_tags_behavior.py  test_tags_parens.py  test_tags_simple.py  test_type_parser.py
